Remove user prompts for metrics URL and JWT token in install.sh, setting default empty values in the configuration file instead. This change streamlines the installation process by eliminating unnecessary user input.

--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-    "URL": "http://127.0.0.1:3000/metrics"
+    "URL": "https://blc.susi.ltd/nodes/stats",
+    "token" : "kACEfb7ZtmUkyjSARCxLMLATXHD8Y5NnFKOo9TzwSk8"
+
 }
