Update metrics URL

--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-    "URL": "https://blc.susi.ltd/nodes/stats",
+    "URL": "https://example.com/stats",
     "token" : "kACEfb7ZtmUkyjSARCxLMLATXHD8Y5NnFKOo9TzwSk8"
-
 }
